feat: query data

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "generate": "graphql-codegen",
     "start": "next start",
     "lint": "next lint"
   },
