--- a/codegen.yml
+++ b/codegen.yml
@@ -1,4 +1,4 @@
-schema: https://localhost:3000
+schema: http://localhost:3000/api/graphql
 documents: './src/**/*.graphql'
 generates:
   ./src/generated/graphql.ts:
