--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
